--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -231,6 +231,7 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
 com.educacion.academico.InscripcionMateria.materias.blank.error = No tiene ninguna materia disponible para inscripcion
 com.educacion.academico.InscripcionMateria.detalleMateria.size.error = No hay ninguna materia seleccionada en el detalle de la inscripción
+com.educacion.academico.InscripcionMateria.button.confirmar = Confirmar Inscripción de Materia
 
 incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
