--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -48,10 +48,14 @@ default.button.delete.label = Eliminar
 default.created.message=Se guardó un registro de {0}
 default.updated.message=Se modificaron los datos del registro de {0}
 default.deleted.message= Registro de {0} con indentificador {1} eliminado
+default.anulado.message=Registro de {0} anulado
 default.not.deleted.message=Registro de {0} con identificador {1} no puede ser eliminado
+default.not.anulado.message=El registro de {0} no se puede anular. {1}
 default.not.found.message=Registro de {0} no encontrado con el identificador {1}
 default.optimistic.locking.failure=Otro usuario estaba modificó el registro de {0} mientras usted estaba editándolo
-default.button.delete.confirm.message=Esta Seguro de que quiere eliminar este Registro?
+default.button.delete.confirm.message=¿Está Seguro de que quiere eliminar este Registro?
+default.button.anular.confirm.message=¿Está Seguro de que quiere anular este Regitro?
+default.button.anular.label=Anular Registro
 default.record.label = Registro {0}
 
 #--------------------------------------------------- Labels de Dominio----------------------------------------
