--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -44,6 +44,7 @@ default.button.create.label = Crear
 default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
+default.confirm.label = Confirmar {0}
 
 default.created.message=Se guardó un registro de {0}
 default.updated.message=Se modificaron los datos del registro de {0}
@@ -137,6 +138,7 @@ inscripcionMatricula.label = Matrículas
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
 com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = No hay inscripciones de materias cargadas
+com.educacion.academico.Matricula.confirmada = La matrícula ya fue confirmada
 preinscripcion.update.estado.error = No se puede modificar un ingreso con estado {0}
 inscripcionMatricula.confirmar.button = Confirmar Matrícula
 
