--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -138,7 +138,10 @@ inscripcionMatricula.label = Matrículas
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
 com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = No hay inscripciones de materias cargadas
+com.educacion.academico.InscripcionMatricula.preinscripcion.error = Error de integridad, la matrícula no tiene una preinscripción
 com.educacion.academico.Matricula.confirmada = La matrícula ya fue confirmada anteriormente
+com.educacion.academico.InscripcionMatricula.primeraMatricula.anulacion.error = No puede anular la primera matrícula, si ya existen matrículas posteriores
+com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.anulacion.error = No puede anular una matrícula si tiene inscripciones sin anular
 preinscripcion.update.estado.error = No se puede modificar un ingreso con estado {0}
 inscripcionMatricula.confirmar.button = Confirmar Matrícula
 
