--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -241,6 +241,7 @@ com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumn
 com.educacion.academico.InscripcionMateria.materias.blank.error = No tiene ninguna materia disponible para inscripcion
 com.educacion.academico.InscripcionMateria.detalleMateria.size.error = No hay ninguna materia seleccionada en el detalle de la inscripción
 com.educacion.academico.InscripcionMateria.button.confirmar = Confirmar Inscripción de Materia
+com.educacion.academico.InscripcionMateriaInstance.origen.anular.error = No se puede eliminar le inscripcion por tener datos vinculados
 
 incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
