--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -242,6 +242,7 @@ com.educacion.academico.InscripcionMateria.materias.blank.error = No tiene ningu
 com.educacion.academico.InscripcionMateria.detalleMateria.size.error = No hay ninguna materia seleccionada en el detalle de la inscripción
 com.educacion.academico.InscripcionMateria.button.confirmar = Confirmar Inscripción de Materia
 com.educacion.academico.InscripcionMateriaInstance.origen.anular.error = No se puede eliminar le inscripcion por tener datos vinculados
+com.educacion.academico.inscripcionMateria.estado.confirmada.error = No se puede confirmar una inscripción si la misma está confirmada
 
 incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
