--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -249,7 +249,7 @@ incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar
 # InscripcionMateriaDetalle
 com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = La materia {0} existe más de una vez en la inscripción
 com.educacion.academico.InscripcionMateriaDetalle.inscripcion.maxsize = El alumno tiene mas de una inscripción en la materia {0}
-com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1}
+com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1} para {2} la materia {3}
 com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alumno no tiene {0} la materia {1} mas de una vez
 com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Ya exite la inscripcion para {7} de la materia {3} en la carrera {5} en el año lectivo {6} para este alumno 
 
