--- a/trunk/legacysaie/grails-app/i18n/messages_es.properties
+++ b/trunk/legacysaie/grails-app/i18n/messages_es.properties
@@ -12,7 +12,7 @@ default.invalid.validator.message=La propiedad [{0}] de la clase [{1}] con valor
 default.not.inlist.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no esta contenido dentro de la lista [{3}]
 default.blank.message=La propiedad [{0}] de la clase [{1}] no puede ser vacía
 default.not.equal.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no puede igualar a [{3}]
-default.null.message=La propiedad [{0}] de la clase [{1}] no puede ser nulo
+#default.null.message=La propiedad [{0}] de la clase [{1}] no puede ser nulo
 default.not.unique.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] debe ser única
 
 default.paginate.prev=Anterior
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=La propiedad {0} debe ser un número válido
 typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
+
+com.educacion.alumno.Alumno.apellido.nullable.error=El apellido es un dato obligatorio
+com.educacion.alumno.Alumno.apellido.blank.error=El apellido es un dato obligatorio
+com.educacion.alumno.Alumno.nombre.nullable.error=El nombre es un dato obligatorio
+com.educacion.alumno.Alumno.nombre.blank.error=El nombre es un dato obligatorio
+com.educacion.alumno.Alumno.numeroDocumento.nullable.error=El número de documento es obligatorio
+com.educacion.alumno.Alumno.numeroDocumento.blank.error=El número de documento es obligatorio
+com.educacion.alumno.Alumno.sexo.nullable.error=El sexo es un dato obligatorio
+com.educacion.alumno.Alumno.sexo.blank.error=El sexo es un dato obligatorio
