--- a/legacysaie/grails-app/i18n/messages_es.properties
+++ b/legacysaie/grails-app/i18n/messages_es.properties
@@ -68,6 +68,7 @@ springSecurity.errors.login.passwordExpired=Su contraseña ha expirado
 springSecurity.errors.login.disabled=Su cuenta está deshabilitada
 springSecurity.errors.login.locked=Su cuenta está bloqueada
 springSecurity.errors.login.fail=No se econtró ningún usuario con el nombre y contraseña ingresados
+springSecurity.denied.message = No está autorizado a ingresar a esta Url
 spinner.alt = Cargando
 
 
