--- a/legacysaie/grails-app/i18n/messages_es.properties
+++ b/legacysaie/grails-app/i18n/messages_es.properties
@@ -74,3 +74,85 @@ spinner.alt = Cargando
 
 com.educacion.seguridad.User.username.unique = El nombre de usuario ya existe
 com.educacion.alumno.Alumno.imagen.maxSize.error = El tamaño de la imagen no puede exceder los 30 KB
+
+com.educacion.alumno.Alumno.apellido.maxSize.error = El tamaño máximo de caracteres del apellido es de {3}
+com.educacion.alumno.Alumno.numeroDocumento.minSize.notmet = El número de documento debe tener {3} dígitos
+com.educacion.alumno.Alumno.nombre.maxSize.error = El tamaño máximo de caracteres del nombre es de {3}
+com.educacion.alumno.Alumno.paisNacimiento.maxSize.error = El tamaño máximo de caracteres del país de nacimiento es de {3}
+com.educacion.alumno.Alumno.provinciaNacimiento.maxSize.error = El tamaño máximo de caracteres de la provincia de nacimiento es de {3}
+com.educacion.alumno.Alumno.localidadNaciento.maxSize.error = El tamaño máximo de caracteres de la localidad de nacimiento es de {3}
+com.educacion.alumno.Alumno.telefonoParticular.maxSize.error = El tamaño máximo de caracteres del teléfono particular es de {3}
+com.educacion.alumno.Alumno.celularParticular.maxSize.error = El tamaño máximo de caracteres del celular particular es de {3}
+com.educacion.alumno.Alumno.email.maxSize.error = El tamaño máximo de caracteres del email es de {3}
+com.educacion.alumno.Alumno.telefonoAlternativo.maxSize.error = El tamaño máximo de caracteres del teléfono alternativo es de {3}
+com.educacion.alumno.Alumno.establecimiento.maxSize.error = El tamaño máximo de caracteres del establecimiento es de {3}
+com.educacion.alumno.Alumno.titulo.maxSize.error = El tamaño máximo de caracteres del título es de {3}
+com.educacion.alumno.Alumno.lugarLaboral.maxSize.error = El tamaño máximo de caracteres del lugar laboral es de {3}
+com.educacion.alumno.Alumno.telefonoLaboral.maxSize.error = El tamaño máximo de caracteres del teléfono laboral es de {3}
+com.educacion.alumno.Alumno.calleLaboral.maxSize.error = El tamaño máximo de caracteres de la calle laboral es de {3}
+com.educacion.alumno.Alumno.numeroDomicilioLaboral.maxSize.error = El tamaño máximo de caracteres del número de domicilio laboral es de {3}
+com.educacion.alumno.Alumno.barrioLaboral.maxSize.error = El tamaño máximo de caracteres del barrio laboral es de {3}
+com.educacion.alumno.Alumno.paisLaboral.maxSize.error = El tamaño máximo de caracteres del país laboral es de {3}
+com.educacion.alumno.Alumno.provinciaLaboral.maxSize.error = El tamaño máximo de caracteres de la provincia laboral es de {3}
+com.educacion.alumno.Alumno.localidadLaboral.maxSize.error = El tamaño máximo de caracteres de la localidad laboral es de {3}
+com.educacion.alumno.Alumno.apellidoNombreTutor.maxSize.error = El tamaño máximo de caracteres del apellido nombre tutor es de {3}
+com.educacion.alumno.Alumno.profesion.maxSize.error = El tamaño máximo de caracteres de la profesión del tutor es de {3}
+com.educacion.alumno.Alumno.parentescoTutor.maxSize.error = El tamaño máximo de caracteres del parentesco del tutor es de {3}
+com.educacion.alumno.Alumno.telefonoTutor.maxSize.error = El tamaño máximo de caracteres del teléfono del tutor es de {3}
+com.educacion.alumno.Alumno.calleTutor.maxSize.error = El tamaño máximo de caracteres de la calle del tutor es de {3}
+com.educacion.alumno.Alumno.numeroDomicilioTutor.maxSize.error = El tamaño máximo de caracteres del número de domicilio es de {3}
+com.educacion.alumno.Alumno.barrioTutor.maxSize.error = El tamaño máximo de caracteres del barrio del tutor es de {3}
+com.educacion.alumno.Alumno.paisTutor.maxSize.error = El tamaño máximo de caracteres del país del tutor es de {3}
+com.educacion.alumno.Alumno.provinciaTutor.maxSize.error = El tamaño máximo de caracteres de la provincia del tutor es de {3}
+com.educacion.alumno.Alumno.localidadTutor.maxSize.error = El tamaño máximo de caracteres de la localidad es de {3}
+com.educacion.alumno.Alumno.apellidoNombreGarante.maxSize.error = El tamaño máximo de caracteres del apellido del garante es de {3}
+com.educacion.alumno.Alumno.profesionGarante.maxSize.error = El tamaño máximo de caracteres de la profesion del garante es de {3}
+com.educacion.alumno.Alumno.parentescoGarante.maxSize.error = El tamaño máximo de caracteres del parentesco del garante es de {3}
+com.educacion.alumno.Alumno.telefonoGarante.maxSize.error = El tamaño máximo de caracteres del teléfono del garante es de {3}
+com.educacion.alumno.Alumno.calleGarante.maxSize.error = El tamaño máximo de caracteres de la calle del garante es de {3}
+com.educacion.alumno.Alumno.numeroDomicilioGarante.maxSize.error = El tamaño máximo de caracteres del número de domicilio del garante es de {3}
+com.educacion.alumno.Alumno.barrioGarante.maxSize.error = El tamaño máximo de caracteres del barrio del garante es de {3}
+com.educacion.alumno.Alumno.paisGarante.maxSize.error = El tamaño máximo de caracteres del país del garante es de {3}
+com.educacion.alumno.Alumno.provincia.maxSize.error = El tamaño máximo de caracteres de la provincia del garante es de {3}
+com.educacion.alumno.Alumno.localidadGarante.maxSize.error = El tamaño máximo de caracteres de la localidad del garante es de {3}
+com.educacion.alumno.Alumno.numeroDocumento.maxSize.error = El tamaño máximo de caracteres de la localidad del garante es de {3}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
