--- a/legacysaie/grails-app/i18n/messages_es.properties
+++ b/legacysaie/grails-app/i18n/messages_es.properties
@@ -116,6 +116,7 @@ com.educacion.alumno.Alumno.paisGarante.maxSize.error = El tamaño máximo de ca
 com.educacion.alumno.Alumno.provincia.maxSize.error = El tamaño máximo de caracteres de la provincia del garante es de {3}
 com.educacion.alumno.Alumno.localidadGarante.maxSize.error = El tamaño máximo de caracteres de la localidad del garante es de {3}
 com.educacion.alumno.Alumno.numeroDocumento.maxSize.error = El tamaño máximo de caracteres de la localidad del garante es de {3}
+com.educacion.alumno.Alumno.email.unique = El correo electrónico ingresado ya fue registrado y no se puede continuar con la registración
 
 
 
